--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "empty-project-template",
   "main": "node_modules/expo/AppEntry.js",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "start": "expo start",
@@ -10,7 +11,13 @@
   },
   "dependencies": {
     "expo": "^29.0.0",
+    "native-base": "^2.7.2",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-native-star-rating": "^1.0.9",
+    "react-navigation": "^2.9.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.2.0"
   }
 }
