--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-star-rating": "^1.0.9",
+    "react-native-swiper": "^1.5.13",
     "react-navigation": "^2.9.3"
   },
   "devDependencies": {
